--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ th,td {
 }
 
 th {
-	background-color: lightsalmon;
+	background-color: #92a8d1;
 	color: lemonchiffon;
 	text-shadow: 1px 1px 2px black;
 }
