--- a/index.css
+++ b/index.css
@@ -21,9 +21,9 @@ th {
 }
 
 td {
-	background-color: cornflowerblue;
-	color: whitesmoke;
-	text-align: center;
+	background-color: #A52A2A;
+	color: #F5F5DC;
+	text-align: right;
 	padding: 20px;
 }
 
