--- a/index.css
+++ b/index.css
@@ -1,140 +1,164 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
- table,
-      th,td {
-        padding: 10px;
-        border: 1px solid black;
-        border-collapse: collapse;
-      }
+table,
+th,
+td {
+    padding: 10px;
+    border: 2px solid black;
+    border-collapse: collapse;
+}
 
-th,td {
-  padding: 15px;
-  font-size: 14px;
+th,
+td {
+    padding: 15px;
+    font-size: 14px;
 }
 
 th {
-	background-color: #92a8d1;
-	color: #92a8d1;
-	text-shadow: 1px 1px 2px black;
+    background-color: yellow;
+    color: black;
+    text-shadow: 1px 1px 2px gray;
 }
 
 td {
-	background-color: red;
-	color: blue;
-	text-align: right;
-	padding: 20px;
+    background-color: yellow;
+    color: black;
+    text-align: center;
+    padding: 20px;
 }
 
 p {
-	font-size: 16px;
-	text-indent: 60px;
-	font-family: Courier New;
-	text-align: justify;
-	padding: 20px;
-	color: black;
-	letter-spacing: 0.5px;
-	line-height: 1.5;
-
+    font-size: 16px;
+    text-indent: 60px;
+    font-family: Courier New;
+    text-align: justify;
+    padding: 20px;
+    color: black;
+    letter-spacing: 0.5px;
+    line-height: 1.5;
 }
 
 .photo {
-	width: 220px;
+    width: 220px;
 }
 
 h1 {
-	font-family: 'Share', papyrus;
+    font-family: 'Share', papyrus;
     font-size: 35px;
-    text-shadow: 5px 5px 0px #f0e8db, 8px 8px 0px #6c5257;
-    color: teal;
-	text-align: center;
-	border-radius: 5px;
-	border: 1px solid black;
-	background-color: lightsalmon;
-	padding: 15px;
+    text-shadow: 5px 5px 0px white, 8px 8px 0px lightsalmon;
+    color: black;
+    text-align: center;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background-color: pink;
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 h2 {
-	font-family: Garamond;
+    font-family: Garamond;
     font-size: 26px;
     text-shadow: 1px 2px 5px white;
-    color: teal;
+    color: white;
     text-align: center;
+    text-decoration: underline;
+    text-decoration-color: lawngreen;
 }
 
 body {
-	background-color: #FAF0E6;
-	}
-footer{
-	text-align: center;
+    background-color: gray;
+    margin: 0;
+}
+
+footer {
+    text-align: center;
 }
 
 nav {
-	display: block;
-	background-color: lightsalmon;
-	overflow: hidden;
-	text-shadow: 1px 1px 1px black;
-	border-radius: 5px;
-	margin-bottom: 5%;
+    display: block;
+    background-color: pink;
+    overflow: hidden;
+    text-shadow: 1px 1px 1px gray;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-bottom: 5px;
 }
 
 nav a {
-	float: left;
-	color: teal;
-	padding: 15px 20px;
-	text-decoration: none;
-	border: 0.5px solid teal;
-	border-radius: 2px;
+    float: left;
+    color: teal;
+    padding: 15px 20px;
+    text-decoration: none;
+    border-radius: 2px;
 }
 
 nav a:hover {
-	background-color: teal;
-	color: lightsalmon;
+    background-color: gray;
+    border: 0.5px solid gray;
+    color: lightsalmon;
 }
 
 ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 li {
-	float: left;
+    float: left;
 }
 
 button {
-	background-color: teal;
-	padding: 10px;
-	border-radius: 10px;
+    /* background-color: teal;
+    padding: 10px;
+    border-radius: 10px;
+    transition-duration: 0.4s;
+    display: inline-block; */
+    background-color: #4CAF50;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 2px 1px;
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
 
-button a{
-	color: white;
-	text-decoration: none;
+button {
+    /* background-color: white;
+    border: 2px solid black;
+    text-decoration: none; */
+    background-color: white;
+    color: black;
+    border: 2px solid grey;
 }
 
-button a:hover {
-	color: blue;
+button:hover {
+    /* background-color: black;
+    color: white; */
+    background-color: gray;
+    color: white;
+}
+
+button a {
+    color: black;
+    text-decoration: none;
 }
 
 .container {
-			max-width: 1200px;
-			margin: auto;
-			background-color: lightsalmon;
-			overflow: auto;
-}
-
-.gallery {
-			margin: 5px;
-			border:1px solid black;
-			float: left;
-			width: 100px;
-			height: 100px
-		}
-		
-.gallery img {
-		width: 10%;
-		height: auto;
-		display: block;
+    max-width: 1200px;
+    margin: auto;
+    background-color: yellow;
+    overflow: auto;
 }
